--- a/src/App.scss
+++ b/src/App.scss
@@ -10,6 +10,9 @@
   align-items: center;
 }
 .header_title {
+  position: relative;
+  top: -3px;
+  z-index: 2;
   margin: 0;
   font-size: 24px;
   font-weight: 500;
