--- a/src/_vars.scss
+++ b/src/_vars.scss
@@ -1,5 +1,5 @@
 /* indentation */
-$main_padding: 0 180px;
+$main_padding: 0 200px;
 
 /* colors */
 $white: #fff;
@@ -7,4 +7,8 @@ $black: #000;
 
 /* Shodows */
 
-$text_shadow: 0 0 4px 4px rgba($color: $black, $alpha: .25);
+$text_shadow: 0 0 4px 4px
+  rgba(
+    $color: $black,
+    $alpha: 0.25,
+  );
