--- a/src/App.scss
+++ b/src/App.scss
@@ -1,21 +1,6 @@
 @import "./vars.scss";
 
-.header {
-  padding: $main_padding;
-  height: 64px;
-}
-.header_inner {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-.header_title {
-  position: relative;
-  top: -3px;
-  z-index: 2;
-  margin: 0;
-  font-size: 24px;
-  font-weight: 500;
-  text-shadow: $text_shadow;
-  color: $white;
-}
+
+
+@import './Component/Header/Header.scss';
+@import './Component/ModelArea/ModelArea.scss';
