--- a/src/assets/styles/App.scss
+++ b/src/assets/styles/App.scss
@@ -1,7 +1,5 @@
 @import "./vars.scss";
 
-
-
-@import './blocks/Header.scss';
-@import './blocks/Sidebar.scss';
-@import './blocks/ModelArea.scss';
+@import "./blocks/Header.scss";
+@import "./blocks/Sidebar.scss";
+@import "./blocks/ModelArea.scss";
