--- a/src/assets/styles/blocks/ModelArea.scss
+++ b/src/assets/styles/blocks/ModelArea.scss
@@ -2,7 +2,14 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  margin: 50px 100px;
+  margin: 50px;
+  margin-left: 0;
   border: 2px solid #ccc;
   min-height: 85vh;
+
+  .canvas {
+    width: 100%;
+    height: 100%;
+    cursor: pointer;
+  }
 }
